@@ -1,0 +1,6 @@
+package net.hasor.plugins.valid.custom;
+/**
+ * Created by zhaoyongchun on 16/7/20.
+ */
+public class CharacterSetValidation {
+}
